@@ -42,7 +42,13 @@ $TCA["tx_bzdstaffdirectory_groups"] = Array (
 		"crdate" => "crdate",
 		"cruser_id" => "cruser_id",
 		"sortby" => "sorting",	
-		"delete" => "deleted",	
+		"delete" => "deleted",
+		'prependAtCopy' => 'LLL:EXT:lang/locallang_general.php:LGL.prependAtCopy',
+		'copyAfterDuplFields' => 'sys_language_uid',
+		'useColumnsForDefaultValues' => 'sys_language_uid',
+   		'transOrigPointerField' => 'l18n_parent',
+		'transOrigDiffSourceField' => 'l18n_diffsource',
+		'languageField' => 'sys_language_uid',
 		"enablecolumns" => Array (		
 			"disabled" => "hidden",
 		),
