@@ -95,6 +95,9 @@ CREATE TABLE tx_bzdstaffdirectory_groups (
 	sorting int(10) DEFAULT '0' NOT NULL,
 	deleted tinyint(4) DEFAULT '0' NOT NULL,
 	hidden tinyint(4) DEFAULT '0' NOT NULL,
+	sys_language_uid int(11) DEFAULT '0' NOT NULL,
+	l18n_parent int(11) DEFAULT '0' NOT NULL,
+	l18n_diffsource mediumblob NOT NULL,
 	group_name tinytext NOT NULL,
 	group_leaders int(11) DEFAULT '0' NOT NULL,
 	team_members int(11) DEFAULT '0' NOT NULL,
