@@ -1,4 +1,5 @@
 version 0.4.0 - currently working on
+- Feature: Added localization to the team records (#56)
 
 version 0.3.1 - released on 2006-12-07
 - Fix: Problem in ListView (#424)
